--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ display:flex;
 
   <div class="container"><!--- about me ---->
     <div class="menu"><!--- menu ---->
-      <a href="Games\ShipGame\ShipGame.html"><img src="Icons\gameIcon.png"></a>
+      <a href="Games\ShipGame\iframe.html"><img src="Icons\gameIcon.png"></a>
     </div>
     <div class="photo"><!--- image ---->
       <img src="myFace.jpg" alt="my face">
