--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ display:flex;
     <div class="content"><!--- right panel ---->
       <div class="aboutMe"><!--- about me ---->
         <p><strong>about me</strong></p>
-        <p class="stats">33 years &nbsp;<i>/</i> &nbsp;Milwaukee &nbsp;<i>/</i> &nbsp;Freelance </p>
+        <p class="stats">&nbsp;Milwaukee &nbsp;<i>/</i> &nbsp;Freelance </p>
         <p class="aboutMeText">
           I started out doing IT work.
           While in school for Electrical Engineering I taught beer and wine making.
